terraform/alb.tf
# alb.tf

# This ALB has all traffic on *.LICENSE-PLATE-ENV.stratus.cloud.gob.bc.ca routed to it

resource "aws_lb" "wfnews_main" {
  name               = var.alb_name
  internal           = true
  load_balancer_type = "application"
  security_groups    = [module.networking.security_groups.web.id]
  subnets            = module.networking.subnets.web.ids

  tags = {
    Environment = "${var.target_env}",
    Public = "True"
  }

}


# Redirect all traffic from the ALB to the target group
resource "aws_alb_listener" "wfnews_server_front_end" {
  load_balancer_arn = aws_lb.wfnews_main.id
  port              = 443
  protocol          = "HTTPS"
  ssl_policy         = "ELBSecurityPolicy-2016-08"
  certificate_arn = aws_acm_certificate.wfnews_ca_certificate.arn

  default_action {
    type             = "fixed-response"
    fixed_response {
      content_type = "text/plain"
      status_code = 404
    }
  }

  lifecycle {
    create_before_destroy = true
  }
}

resource "aws_alb_listener" "wfnews_backend_listener" {
  load_balancer_arn = aws_lb.wfnews_main.id
  port              = "80"
  protocol          = "HTTP"

  default_action {
    type = "redirect"

    redirect {
      port        = "443"
      protocol    = "HTTPS"
      status_code = "HTTP_301"
    }
  }
}

resource "aws_alb_target_group" "wfnews_server" {
  name                 = "wfnews-server-${var.target_env}"
  port                 = var.server_port
  protocol             = "HTTP"
  vpc_id               = module.networking.vpc.id
  target_type          = "ip"
  deregistration_delay = 30

  health_check {
    healthy_threshold   = "2"
    interval            = "300"
    protocol            = "HTTP"
    matcher             = "200"
    timeout             = "60"
    path                = var.api_health_check_path
    unhealthy_threshold = "2"
  }

  tags = local.common_tags
}

resource "aws_alb_target_group" "wfnews_client" {
  name                 = "wfnews-client-${var.target_env}"
  port                 = var.client_port
  protocol             = "HTTP"
  vpc_id               = module.networking.vpc.id
  target_type          = "ip"
  deregistration_delay = 30

  health_check {
    healthy_threshold   = "2"
    interval            = "300"
    protocol            = "HTTP"
    matcher             = "200"
    timeout             = "3"
    path                = var.client_health_check_path
    unhealthy_threshold = "2"
  }

  tags = local.common_tags
}

resource "aws_alb_target_group" "wfnews_nginx" {
  name                 = "wfnews-nginx-${var.target_env}"
  port                 = var.nginx_ports[0]
  protocol             = "HTTP"
  vpc_id               = module.networking.vpc.id
  target_type          = "ip"
  deregistration_delay = 30

  health_check {
    healthy_threshold   = "2"
    interval            = "300"
    protocol            = "HTTP"
    matcher             = "200"
    timeout             = "3"
    port                = var.health_check_port
    path                = "${var.api_health_check_path}"
    unhealthy_threshold = "2"
  }

  tags = local.common_tags
}

resource "aws_alb_target_group" "wfss_pointid" {
  name                 = "wfss-pointid-api-${var.target_env}"
  port                 = var.pointid_port
  protocol             = "HTTP"
  vpc_id               = module.networking.vpc.id
  target_type          = "ip"
  deregistration_delay = 30

  health_check {
    healthy_threshold   = "2"
    interval            = "300"
    protocol            = "HTTP"
    matcher             = "200"
    timeout             = "60"
    port                = var.health_check_port
    path                = var.pointid_health_check_path
    unhealthy_threshold = "2"
  }

  tags = local.common_tags
}

resource "aws_alb_target_group" "wfone_notifications_api" {
  name                 = "wfone-notifications-api-${var.target_env}"
  port                 = var.wfone_notifications_api_port
  protocol             = "HTTP"
  vpc_id               = module.networking.vpc.id
  target_type          = "ip"
  deregistration_delay = 30

  health_check {
    healthy_threshold   = "2"
    interval            = "300"
    protocol            = "HTTP"
    matcher             = "200"
    timeout             = "60"
    port                = var.health_check_port
    path                = var.api_health_check_path
    unhealthy_threshold = "2"
  }

  tags = local.common_tags
}

resource "aws_alb_target_group" "wfone_notifications_push_api" {
  for_each = var.WFONE_MONITORS_NAME_MAP
  #Would prefer to have name be wfone-notification-push-api-active-fires-dev or so on, but maximum is 32 chars
  name                 = "${each.key}-${var.target_env}"
  port                 = var.wfone_notifications_push_api_port
  protocol             = "HTTP"
  vpc_id               = module.networking.vpc.id
  target_type          = "ip"
  deregistration_delay = 30

  health_check {
    healthy_threshold   = "2"
    interval            = "300"
    protocol            = "HTTP"
    matcher             = "200"
    timeout             = "3"
    port                = var.health_check_port
    path                = var.api_health_check_path
    unhealthy_threshold = "2"
  }

  tags = local.common_tags
}

resource "aws_lb_listener_rule" "wfnews_host_based_weighted_routing" {
  listener_arn = aws_alb_listener.wfnews_server_front_end.arn
  priority = 104

  action {
    type             = "forward"
    target_group_arn = aws_alb_target_group.wfnews_server.arn
  }

  condition {
    host_header {
      values = ["wfnews-server.*"]
    }
  }
  condition {
    http_header {
      http_header_name = "X-Cloudfront-Header"
      values           = ["${var.cloudfront_header}"]
    }
  }
}

resource "aws_lb_listener_rule" "wfnews_host_based_weighted_routing_client" {

  listener_arn = aws_alb_listener.wfnews_server_front_end.arn
  priority     = 50000

  action {
    type             = "forward"
    target_group_arn = aws_alb_target_group.wfnews_client.arn
  }
  condition {
    http_header {
      http_header_name = "X-Cloudfront-Header"
      values           = ["${var.cloudfront_header}"]
    }
  }
}

resource "aws_lb_listener_rule" "wfnews_host_based_weighted_routing_wfss_pointid" {

  listener_arn = aws_alb_listener.wfnews_server_front_end.arn
  priority = 100

  action {
    type             = "forward"
    target_group_arn = aws_alb_target_group.wfss_pointid.arn
  }

  condition {
    host_header {
      values = ["wfss-pointid-api.*"]
    }
  }
  condition {
    http_header {
      http_header_name = "X-Cloudfront-Header"
      values           = ["${var.cloudfront_header}"]
    }
  }
}

resource "aws_lb_listener_rule" "wfnews_host_based_weighted_routing_wfone_notifications_api" {

  listener_arn = aws_alb_listener.wfnews_server_front_end.arn
  priority = 101

  action {
    type             = "forward"
    target_group_arn = aws_alb_target_group.wfone_notifications_api.arn
  }

  condition {
    host_header {
      values = ["notifications-api.*"]
    }
  }
  condition {
    http_header {
      http_header_name = "X-Cloudfront-Header"
      values           = ["${var.cloudfront_header}"]
    }
  }
}

#Creation is mandatory when using ecs service
resource "aws_lb_listener_rule" "wfnews_host_based_weighted_routing_push_api" {
  for_each = var.WFONE_MONITORS_NAME_MAP
  listener_arn = aws_alb_listener.wfnews_server_front_end.arn
  priority = 102

  action {
    type             = "forward"
    target_group_arn = aws_alb_target_group.wfone_notifications_push_api[each.key].arn
  }

  condition {
    path_pattern {
      values = ["/wfone-notifications-push-api-${each.key}"]
    }
  }
  condition {
    source_ip {
      values           = ["127.0.0.1/32"]
    }
  }
}

resource "aws_lb_listener_rule" "wfnews_host_based_weighted_routing_nginx" {

  listener_arn = aws_alb_listener.wfnews_server_front_end.arn
  priority = 103

  action {
    type             = "forward"
    target_group_arn = aws_alb_target_group.wfnews_nginx.arn
  }

  condition {
    host_header {
      values = ["wfnews-api.*"]
    }
  }
  condition {
    http_header {
      http_header_name = "X-Cloudfront-Header"
      values           = ["${var.cloudfront_header}"]
    }
  }
}
